# LSF-TO-JSON-Format-Converter-For-ESCUDE-Studio-Engine-Development-

./: README.md
lsf_to_json_converter_Ver1.0_code/: BUILD_FROM_SOURCE.md  README.md  README_中文.md  main.py  pyproject.toml  requirements.txt  run_cli_examples.bat  run_windows.bat  version_info.txt
lsf_to_json_converter_Ver1.0_code/lsf_to_json_converter/: __init__.py  cli.py  core.py  gui.py
