[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lsf-to-json-converter"
version = "1.0.0"
description = "LSF文件转JSON文件Ver1.0：针对小E社引擎开发的 LSF 批量转 JSON 工具"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "ユイ可愛ね" }
]
keywords = ["lsf", "json", "galgame", "resource", "converter"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pyinstaller>=6.0"]

[project.scripts]
lsf2json = "lsf_to_json_converter.cli:main"

[tool.setuptools.packages.find]
include = ["lsf_to_json_converter*"]

[tool.setuptools.package-data]
lsf_to_json_converter = []
